[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/actor/Player.gd" type="Script" id=2]
[ext_resource path="res://media/image/player/hand.png" type="Texture" id=9]
[ext_resource path="res://media/image/player/player_still.png" type="Texture" id=11]
[ext_resource path="res://src/shader/add_color.gdshader" type="Shader" id=12]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 17 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 10 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 12 )
shader_param/add_color = Color( 0, 0.5, 1, 1 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
z_index = 50
z_as_relative = false
collision_layer = 3
script = ExtResource( 2 )

[node name="DebugCanvas" type="CanvasLayer" parent="."]

[node name="Labels" type="Control" parent="DebugCanvas"]
margin_left = 10.2806
margin_top = 10.0
margin_right = 50.2806
margin_bottom = 50.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DebugCanvas/Labels"]
visible = false
margin_right = 21.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "debug text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BodyArea" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 136

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyArea"]
shape = SubResource( 2 )

[node name="Areas" type="Node2D" parent="."]

[node name="HitArea" type="Area2D" parent="Areas"]
position = Vector2( 55, 0 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/HitArea"]
shape = SubResource( 3 )

[node name="Sprites" type="Node2D" parent="."]
material = SubResource( 4 )

[node name="Body" type="Node2D" parent="Sprites"]
use_parent_material = true

[node name="Sprite" type="Sprite" parent="Sprites/Body"]
use_parent_material = true
position = Vector2( 0, -3 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )

[node name="HandL" type="Node2D" parent="Sprites"]
use_parent_material = true
position = Vector2( -25.25, 5.25 )

[node name="Sprite" type="Sprite" parent="Sprites/HandL"]
use_parent_material = true
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 9 )

[node name="HandR" type="Node2D" parent="Sprites"]
use_parent_material = true
position = Vector2( 25.5, 5.25 )

[node name="Sprite" type="Sprite" parent="Sprites/HandR"]
use_parent_material = true
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 9 )

[connection signal="area_entered" from="BodyArea" to="." method="_on_BodyArea_area_entered"]
[connection signal="body_entered" from="BodyArea" to="." method="_on_BodyArea_body_entered"]
